app/assets/stylesheets/extensions/navbars.scss
.navbar a,
.navbar-header,
.navbar-header img {
  @include ignore-selection;
}

.navbar-brand {
  border: 0;
  outline: 0;
}

.navbar-custom {
  border-bottom: 1px solid transparent;
  padding-top: 0;
  padding-bottom: 0;
  transition: $transition-bg;

  .navbar-toggler {
    border: 0;
    outline: 0;
  }
}

@include media-breakpoint-up(lg) {
  .nav-item {
    &:focus,
    &:hover,
    &.active {
      border-bottom: 2px solid transparent;
      margin-bottom: -2px;
    }
  }

  .nav-item-signup {
    border: 2px solid transparent;
    border-radius: .25rem;
  }
}

@each $name, $theme in $themes {
  .menu-#{$name} {
    .navbar-brand {
      color: map-get($theme, brand-white) !important;
    }

    @include media-breakpoint-up(lg) {
      .nav-item,
      .nav-item-signup {
        &:focus,
        &:hover,
        &.active {
          color: rgba($white, .9);
          background-color: rgba($black, .2);
          border-color: map-get($theme, p200);
        }
      }

      .nav-item-signup {
        border-color: rgba($white, .9);
      }
    }
  }
}

